fix overflow

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,8 +28,10 @@
       font-size: 16px
       line-height: 22px
     &__button
+      margin-bottom: 5px
+      margin-top: 1px
       padding: 10px 27px
-      max-height: 48px
+      min-height: 48px
       min-width: 148px
 
 .menu-button
