--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -26,13 +26,13 @@
       background-color: $button-color-blue
       color: #fff
       width: 209px
-      height: 58px
+      min-height: 58px
     &-read
-      margin-top: 2px
-      padding-bottom: 20px
+      padding-bottom: 15px
+      margin-top: 3px
       padding-top: 15px
       width: 234px
-      height: 58px
+      min-height: 58px
       font-style: normal
       font-weight: bold
       font-size: 18px
